# logsense-ai

./: app.py  config.py  pyproject.toml  rag.py  requirements.txt
templates/: index.html
vectorstore/: index.faiss  index.pkl
